WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258237
[GStreamer] MockDeviceProvider ifdefs are not consistent
https://bugs.webkit.org/show_bug.cgi?id=258237
Summary
[GStreamer] MockDeviceProvider ifdefs are not consistent
Philippe Normand
Reported
2023-06-17 07:24:16 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-06-17 07:25:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15071
EWS
Comment 2
2023-06-17 07:38:59 PDT
Committed
265271@main
(67207eb34167): <
https://commits.webkit.org/265271@main
> Reviewed commits have been landed. Closing PR #15071 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-06-17 07:39:15 PDT
<
rdar://problem/110944753
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug