[GStreamer] MockDeviceProvider ifdefs are not consistent https://bugs.webkit.org/show_bug.cgi?id=258237

Reviewed by Michael Catanzaro.

This code is not specific to GSTREAMER_WEBRTC.

* Source/WebCore/platform/mediastream/gstreamer/GStreamerMockDeviceProvider.cpp:
* Source/WebCore/platform/mediastream/gstreamer/GStreamerMockDeviceProvider.h:

Canonical link: https://commits.webkit.org/265271@main